use file and url to include a file
git-svn-id: https://svn.apache.org/repos/asf/incubator/ivy/trunk@484158 13f79535-47bb-0310-9956-ffa450edef68